[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Button.tscn" type="PackedScene" id=2]

[node name="GUI" type="Control"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="GameOver" type="Control" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MenuButton" parent="GameOver" instance=ExtResource( 2 )]

[node name="Label" parent="GameOver/MenuButton"]

text = "Menu"

[node name="Pause" type="Control" parent="."]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -20.0
margin_right = 23.5
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="ContinueButton" parent="Pause/VBoxContainer" instance=ExtResource( 2 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 2.0
margin_right = 47.0
margin_bottom = 18.0

[node name="Label" parent="Pause/VBoxContainer/ContinueButton"]

text = "Continue"

[node name="MenuButton" parent="Pause/VBoxContainer" instance=ExtResource( 2 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 22.0
margin_right = 47.0
margin_bottom = 38.0

[node name="Label" parent="Pause/VBoxContainer/MenuButton"]

text = "Menu"

[connection signal="pressed" from="GameOver/MenuButton" to="." method="on_pressed_menu"]

[connection signal="pressed" from="Pause/VBoxContainer/ContinueButton" to="." method="on_pressed_continue"]

[connection signal="pressed" from="Pause/VBoxContainer/MenuButton" to="." method="on_pressed_menu"]


[editable path="GameOver/MenuButton"]
[editable path="Pause/VBoxContainer/ContinueButton"]
[editable path="Pause/VBoxContainer/MenuButton"]
